# intelligent-decision-making-platform

./: .gitignore  README.md  pyproject.toml
docs/: 000_FOUNDATION.md  001_PLATFORM_VISION.md  002_PLATFORM_CONSTITUTION.md  003_PLATFORM_ARCHITECTURE.md  004_PLATFORM_GLOSSARY.md  005_DECISION_ARCHITECTURE.md  006_DEVELOPMENT_ROADMAP.md  CONSTITUTION.md  DECISION_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  GLOSSARY.md  PLATFORM_ARCHITECTURE.md  VISION.md
src/idmp/assessment/: __init__.py  identifiers.py  models.py
src/idmp/core/: __init__.py  exceptions.py
src/idmp/decision/: __init__.py  identifiers.py  models.py
src/idmp/evidence/: __init__.py  identifiers.py  models.py
src/idmp/observation/: __init__.py  identifiers.py  models.py
src/idmp/policy/: __init__.py  identifiers.py  models.py
src/idmp/policy_evaluation/: __init__.py  identifiers.py  models.py
tests/assessment/: test_identifiers.py  test_models.py
tests/core/: test_exceptions.py
tests/decision/: test_identifiers.py  test_models.py
tests/evidence/: test_identifiers.py  test_models.py
tests/observation/: test_identifiers.py  test_models.py
tests/policy/: test_identifiers.py  test_models.py
tests/policy_evaluation/: test_identifiers.py  test_models.py
